<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageButton
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/delete_button"
                app:srcCompat="@drawable/ic_baseline_delete_24" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRunningDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sample_date"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRunningDistance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_distance"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvRunningDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_time"
                android:textAlignment="center" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>