<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InputResultsActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeaderInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_progress"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="85dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:startIconDrawable="@drawable/ic_baseline_date_range_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDistance"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDate"
        app:layout_constraintVertical_bias="0"
        app:startIconDrawable="@drawable/ic_baseline_directions_run_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distance"
            android:maxLength="6"
            android:imeOptions="actionNext"
            android:digits="0123456789,."
            android:inputType="number"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDuration"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDistance"
        app:layout_constraintVertical_bias="0"
        app:startIconDrawable="@drawable/ic_baseline_timer_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:inputType="time" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubmit"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDuration" />

</androidx.constraintlayout.widget.ConstraintLayout>